# discobot

./: Dockerfile  Procfile  README.md  fly.toml  hard_coded_funcs.py  igdb.py  info.txt  install.txt  main.py  pyproject.toml  responses.py  respostas.py
.github/workflows/: deploy-toec2.yml
discobot/: __main__.py  hard_coded_funcs.py  hard_coded_games.py
