[tool.poetry]
name = "discobot"
version = "0.1.0"
description = "\"ola mundos proj\""
authors = ["yellowisk <h245293@dac.unicamp.br>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
discord-py = "2.4.0"
python-dotenv = "1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
